@@ -1,3 +1,7 @@
+2005-07-19  John Luke  <john.luke@gmail.com>
+
+	* en/Gtk/TreeModelFilter.xml: add an example
+
 2005-06-22  Mike Kestner  <mkestner@novell.com>
 
 	* gen-vm-docs.cs : some monodocer formatting changes and attr lookup
